--- a/OpenScrape/OpenScrape.vcxproj
+++ b/OpenScrape/OpenScrape.vcxproj
@@ -122,6 +122,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\OpenHoldem\CScraperPreprocessor.cpp" />
     <ClCompile Include="..\OpenHoldem\WebSafeColours.cpp" />
     <ClCompile Include="CRegionCloner.cpp" />
     <ClCompile Include="CTablemap_TroubleChecking.cpp">
@@ -163,6 +164,8 @@
     <ClCompile Include="..\CTablemap\CTablemapAccess.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\OpenHoldem\CScraperPreprocessor.h" />
+    <ClInclude Include="..\OpenHoldem\OH_MessageBox.h" />
     <ClInclude Include="..\OpenHoldem\WebSafeColours.h" />
     <ClInclude Include="CRegionCloner.h" />
     <ClInclude Include="debug.h" />
