--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,6 @@ Debug
 Release
 Release - Optimized
 Documentation/OpenHoldem_Manual.chm
+Documentation/Chapters/titlepage/images/Temp
+Documentation/Chapters/titlepage/original_images
 
