--- a/OpenHoldem/OpenHoldem.rc
+++ b/OpenHoldem/OpenHoldem.rc
@@ -234,6 +234,7 @@ END
 
 IDR_MAINFRAME ACCELERATORS
 BEGIN
+    "H",            ID_HELP_HELP,           VIRTKEY, CONTROL, SHIFT, NOINVERT
     VK_F4,          ID_DLL_LOADSPECIFICFILE, VIRTKEY, NOINVERT
     "C",            ID_EDIT_COPY,           VIRTKEY, CONTROL, NOINVERT
     VK_INSERT,      ID_EDIT_COPY,           VIRTKEY, CONTROL, NOINVERT
@@ -1389,14 +1390,14 @@ BEGIN
     VK_F2,          ID_TOGGLE_BOOKMARK,     VIRTKEY, CONTROL, NOINVERT
     VK_F2,          ID_GOTO_NEXT_BOOKMARK,  VIRTKEY, NOINVERT
     VK_F2,          ID_GOTO_PREV_BOOKMARK,  VIRTKEY, SHIFT, NOINVERT
-    "C",            ID_FORMULA_EDIT_COPY,   VIRTKEY, CONTROL, NOINVERT
-    "X",            ID_FORMULA_EDIT_CUT,    VIRTKEY, CONTROL, NOINVERT
-    "D",            ID_FORMULA_EDIT_DELETE, VIRTKEY, CONTROL, NOINVERT
-    "V",            ID_FORMULA_EDIT_PASTE,  VIRTKEY, CONTROL, NOINVERT
-    "Y",            ID_FORMULA_EDIT_REDO,   VIRTKEY, CONTROL, NOINVERT
     "A",            ID_FORMULA_EDIT_SELECTALL, VIRTKEY, CONTROL, NOINVERT
-    "Z",            ID_FORMULA_EDIT_UNDO,   VIRTKEY, CONTROL, NOINVERT
+    "C",            ID_FORMULA_EDIT_COPY,   VIRTKEY, CONTROL, NOINVERT
+    "D",            ID_FORMULA_EDIT_DELETE, VIRTKEY, CONTROL, NOINVERT
     "F",            ID_FORMULA_EDIT_FIND,   VIRTKEY, CONTROL, NOINVERT
+    "V",            ID_FORMULA_EDIT_PASTE,  VIRTKEY, CONTROL, NOINVERT
+    "X",            ID_FORMULA_EDIT_CUT,    VIRTKEY, CONTROL, NOINVERT
+    "Y",            ID_FORMULA_EDIT_REDO,   VIRTKEY, CONTROL, NOINVERT
+    "Z",            ID_FORMULA_EDIT_UNDO,   VIRTKEY, CONTROL, NOINVERT
 END
 
 IDR_FORMULA_DIALOG_ACC ACCELERATORS
