--- a/##_OpenHoldem_Release_Directory_##/OpenHoldem_Preferences__feel_free_to_rename_this_file_to_whatever_you_like.INI
+++ b/##_OpenHoldem_Release_Directory_##/OpenHoldem_Preferences__feel_free_to_rename_this_file_to_whatever_you_like.INI
@@ -52,6 +52,7 @@ swag_delay_1=400.000000
 swag_delay_2=400.000000
 swag_delay_3=700.000000
 engage_autoplayer=1.000000
+swag_use_comma=0.000000
 chat_min_delay=600.000000
 chat_random_delay=3000.000000
 configurationcheck_input_settings=1.000000
