Code refactoring of CTableState

--- a/OpenHoldem/OpenHoldem.vcxproj
+++ b/OpenHoldem/OpenHoldem.vcxproj
@@ -219,6 +219,7 @@
     <ClCompile Include="CSymbolengineTableStats.cpp" />
     <ClCompile Include="CSymbolEngineVersus.cpp" />
     <ClCompile Include="CTableState.cpp" />
+    <ClCompile Include="CTableTitle.cpp" />
     <ClCompile Include="CValidator.cpp" />
     <ClCompile Include="CWhiteInfoBox.cpp" />
     <ClCompile Include="debug.cpp" />
@@ -494,6 +495,7 @@
     <ClInclude Include="CSymbolengineTableStats.h" />
     <ClInclude Include="CSymbolengineVersus.h" />
     <ClInclude Include="CTableState.h" />
+    <ClInclude Include="CTableTitle.h" />
     <ClInclude Include="CValidator.h" />
     <ClInclude Include="CWhiteInfoBox.h" />
     <ClInclude Include="debug.h" />
