--- a/OpenHoldem/OpenHoldem.vcxproj
+++ b/OpenHoldem/OpenHoldem.vcxproj
@@ -227,6 +227,7 @@
     <ClCompile Include="MD5_Checksum.cpp" />
     <ClCompile Include="Median.cpp" />
     <ClCompile Include="MemoryLogging.cpp" />
+    <ClCompile Include="mtrand.cpp" />
     <ClCompile Include="OpenHoldem.cpp" />
     <ClCompile Include="OpenHoldemDoc.cpp" />
     <ClCompile Include="Singletons.cpp" />
@@ -502,6 +503,7 @@
     <ClInclude Include="MD5_Checksum.h" />
     <ClInclude Include="Median.h" />
     <ClInclude Include="MemoryLogging.h" />
+    <ClInclude Include="mtrand.h" />
     <ClInclude Include="MyCToolBar.h" />
     <ClInclude Include="OH_MessageBox.h" />
     <ClInclude Include="OpenHoldem.h" />
