--- a/OpenHoldem/OpenHoldem.vcxproj
+++ b/OpenHoldem/OpenHoldem.vcxproj
@@ -199,6 +199,8 @@
     <ClCompile Include="CLimitScraper.cpp" />
     <ClCompile Include="CMyMutex.cpp" />
     <ClCompile Include="COcclusionCheck.cpp" />
+    <ClCompile Include="CParseTreeOperatorNode.cpp" />
+    <ClCompile Include="CParseTreeTerminalNode.cpp" />
     <ClCompile Include="CPlayer.cpp" />
     <ClCompile Include="CPopupHandler.cpp" />
     <ClCompile Include="CPreferences.cpp" />
@@ -476,6 +478,8 @@
     <ClInclude Include="CLimitScraper.h" />
     <ClInclude Include="CMyMutex.h" />
     <ClInclude Include="COcclusionCheck.h" />
+    <ClInclude Include="CParseTreeOperatorNode.h" />
+    <ClInclude Include="CParseTreeTerminalNode.h" />
     <ClInclude Include="CPlayer.h" />
     <ClInclude Include="CPopupHandler.h" />
     <ClInclude Include="CPreferences.h" />
