--- a/OpenHoldem/OpenHoldem.vcxproj.filters
+++ b/OpenHoldem/OpenHoldem.vcxproj.filters
@@ -750,6 +750,12 @@
     <ClCompile Include="CParseTreeTerminalNode.cpp">
       <Filter>Source Files\Parser</Filter>
     </ClCompile>
+    <ClCompile Include="CParseTreeTerminalNodeIdentifier.cpp">
+      <Filter>Source Files\Parser</Filter>
+    </ClCompile>
+    <ClCompile Include="CParseTreeTerminalNodeNumber.cpp">
+      <Filter>Source Files\Parser</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Validator_Rules\consistency_checks_action_symbols_inline.cpp_">
@@ -1592,6 +1598,12 @@
       <Filter>Header Files\Parser</Filter>
     </ClInclude>
     <ClInclude Include="CParseTreeTerminalNode.h">
+      <Filter>Header Files\Parser</Filter>
+    </ClInclude>
+    <ClInclude Include="CParseTreeTerminalNodeIdentifier.h">
+      <Filter>Header Files\Parser</Filter>
+    </ClInclude>
+    <ClInclude Include="CParseTreeTerminalNodeNumber.h">
       <Filter>Header Files\Parser</Filter>
     </ClInclude>
   </ItemGroup>
