--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 Debug
 Release
 Release - Optimized
+"Release - Optimized"
 Documentation/OpenHoldem_Manual.chm
 Documentation/Chapters/titlepage/images/Temp
 Documentation/Chapters/titlepage/original_images
