--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 Debug
 Release
 Release - Optimized
-"Release - Optimized"
+OpenHoldem/Release - Optimized
 Documentation/OpenHoldem_Manual.chm
 Documentation/Chapters/titlepage/images/Temp
 Documentation/Chapters/titlepage/original_images
