--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,11 @@
 *.log
 *.tlog
 *.pch
+*.ipch
 *.manifest
 *.lastbuildstate
+*.opendb
+*.sdf
 Debug
 Documentation/OpenHoldem_Manual.chm
 Documentation/Chapters/titlepage/images/Temp
