--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 *.lastbuildstate
 *.opendb
 *.sdf
+*.suo
 Debug
 Documentation/OpenHoldem_Manual.chm
 Documentation/Chapters/titlepage/images/Temp
