--- a/OpenHoldem/OpenHoldem.vcxproj
+++ b/OpenHoldem/OpenHoldem.vcxproj
@@ -400,6 +400,7 @@
     <ClCompile Include="COHScriptObject.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="OpenHoldem.def" />
     <None Include="Validator_Rules\consistency_checks_action_symbols_inline.cpp_" />
     <None Include="Validator_Rules\consistency_checks_autoplayer_inline.cpp_" />
     <None Include="Validator_Rules\consistency_checks_bets_inline.cpp_" />
