Refactoring autoplayer, casinointerface creating new classes CAlinSliuder, CBetsizeInputBox

--- a/OpenHoldem/OpenHoldem.vcxproj
+++ b/OpenHoldem/OpenHoldem.vcxproj
@@ -190,8 +190,10 @@
   <ItemGroup>
     <ClCompile Include="AllinAdjustment.cpp" />
     <ClCompile Include="BetpotCalculations.cpp" />
+    <ClCompile Include="CAllinSlider.cpp" />
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="CAutoplayerButton.cpp" />
+    <ClCompile Include="CBetsizeInputBox().cpp" />
     <ClCompile Include="CBlindGuesser.cpp" />
     <ClCompile Include="CBlindLevels.cpp" />
     <ClCompile Include="CCasinoHotkeys.cpp" />
@@ -473,8 +475,10 @@
   <ItemGroup>
     <ClInclude Include="AllinAdjustment.h" />
     <ClInclude Include="BetpotCalculations.h" />
+    <ClInclude Include="CAllinSlider.h" />
     <ClInclude Include="Card.h" />
     <ClInclude Include="CAutoplayerButton.h" />
+    <ClInclude Include="CBetsizeInputBox.h" />
     <ClInclude Include="CBlindGuesser.h" />
     <ClInclude Include="CBlindLevels.h" />
     <ClInclude Include="CCasinoHotkeys.h" />
