--- a/OpenHoldem/OpenHoldem.vcxproj.filters
+++ b/OpenHoldem/OpenHoldem.vcxproj.filters
@@ -765,6 +765,12 @@
     <ClCompile Include="CAutoplayerButton.cpp">
       <Filter>Source Files\AutoPlayer</Filter>
     </ClCompile>
+    <ClCompile Include="CBetsizeInputBox().cpp">
+      <Filter>Source Files\AutoPlayer</Filter>
+    </ClCompile>
+    <ClCompile Include="CAllinSlider.cpp">
+      <Filter>Source Files\AutoPlayer</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Validator_Rules\consistency_checks_action_symbols_inline.cpp_">
@@ -1625,6 +1631,12 @@
       <Filter>Header Files\AutoPlayer</Filter>
     </ClInclude>
     <ClInclude Include="CAutoplayerButton.h">
+      <Filter>Header Files\AutoPlayer</Filter>
+    </ClInclude>
+    <ClInclude Include="CBetsizeInputBox.h">
+      <Filter>Header Files\AutoPlayer</Filter>
+    </ClInclude>
+    <ClInclude Include="CAllinSlider.h">
       <Filter>Header Files\AutoPlayer</Filter>
     </ClInclude>
   </ItemGroup>
