Advanced logging options for hopper functions, ini, prwin and icm functions.

--- a/OpenHoldem/OpenHoldem.rc
+++ b/OpenHoldem/OpenHoldem.rc
@@ -686,11 +686,11 @@ IDD_SAPREFS11 DIALOGEX 0, 0, 219, 182
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    GROUPBOX        "Basic Logging",IDC_STATIC,0,0,205,80
-    CONTROL         "Basic Info",IDC_LOG_BASIC_INFO,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,6,16,88,9
-    CONTROL         "Autoplayer Trace",IDC_ENABLE_TRACE,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,6,32,139,8
-    CONTROL         "Errors and Warnings",IDC_ENABLE_ERROR_LOGGiNG,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,6,48,105,8
-    CONTROL         "DLL Messages",IDC_ENABLE_DLL_LOGGiNG,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,6,64,105,8
+    GROUPBOX        "Advanced Logging",IDC_STATIC,0,0,205,80
+    CONTROL         "Hopper Functions",IDC_LOG_BASIC_INFO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,16,88,9
+    CONTROL         "Ini Functions",IDC_ENABLE_TRACE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,32,139,8
+    CONTROL         "PrWin Functions",IDC_ENABLE_ERROR_LOGGiNG,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,48,105,8
+    CONTROL         "ICM Functions",IDC_ENABLE_DLL_LOGGiNG,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,64,105,8
     LTEXT           "Erase old logs larger than (MB)",IDC_STATIC,6,90,116,8
     EDITTEXT        IDC_MAXIMUM_LOGSIZE,163,88,31,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "",IDC_MAXIMUM_LOGSIZE_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_NOTHOUSANDS,194,88,11,14
